* New: Method added Trigger:AddTimerSeq(TimerObj) - Adds a Timer Object to the Timer sequence list for a created Trigger.
* New: Method added Trigger:ResetAlertSeq() - Resets the counter for the Alert sequence position.
* New: Method added Trigger:ResetTimerSeq() - Resets the counter for the Timer sequence position
* New: Method added Trigger:ResetSeq() - Resets both Timer and Alert positions.
* Fixed: Timers which trigger after another timer are working again. (ForceStop was flagged always on /rolleyes)

Encounters
* Merged with KBM Public Encounters (Details to be updated)

Endless Eclipse
* Progenitor Saetos
** Fixed: Now returns correct Boss Objects for each boss. (Phase Monitor updates will be working)

Translations
* German Updates.
* French Updates.
----
v1.4.1

Menu
* New: The menu window will now remember which Rift tab you were last in (Base or Storm Legion).

Encounters
* New: When an encounter triggers a victory, all tracked units are entered in to an Ignore List to prevent residual units re-trigger the same encounter.
* Note: Using /kbmreset will force clear this list in the rare events of false positives.

LibSUnit
* Change: When units enter a Partial state, their Combat flag is forced to false.
* Change: When units die, their Combat flag is forced to false.

Mechanic Timers
* New: Repeating and Wait timers can now be forced to stop by using KBM.MechTimer:AddRemove(Timer, true)
* Change: Mechanic Timers can now trigger multiple timers at the same time, at any point in its duration.

Slash Commands
* Fixed: Typing /kbmbuffs USERNAME works again.

Percentage Monitor
* New: Completely redesigned and made to be a module available to any raid encounter.
* New: The graphics have been overhauled.
* New: Ability to freely scale the monitor via the mouse wheel, between 50%-150%.
* New: Middle click [while unlocked] will reset the scale to default (100%)
* New: Option to hide/display Boss names on the monitor.