@@ -452,8 +452,8 @@ function KT:Start()
 	self.Toinenveli.Triggers.Glimpse:AddTimer(self.Kolmasveli.TimersRef.Glimpse)
 	self.Toinenveli.Triggers.PhaseTwo = KBM.Trigger:Create(40, "percent", self.Toinenveli)
 	self.Toinenveli.Triggers.PhaseTwo:AddPhase(self.PhaseTwo)
-	--self.Toinenveli.Triggers.PhaseFinal = KBM.Trigger:Create(10, "percent", self.Toinenveli)
-	--self.Toinenveli.Triggers.PhaseFinal:AddPhase(self.PhaseFinal)
+	self.Toinenveli.Triggers.PhaseFinal = KBM.Trigger:Create(10, "percent", self.Toinenveli)
+	self.Toinenveli.Triggers.PhaseFinal:AddPhase(self.PhaseFinal)
 
 	self.Vortex.Triggers.Flare = KBM.Trigger:Create(self.Lang.Ability.Flare[KBM.Lang], "cast", self.Vortex)
 	self.Vortex.Triggers.Flare:AddAlert(self.Vortex.AlertsRef.Flare)
